----------------------------------------------------------------------------
Centric CRM 4.1 beta
Copyright (C) 2006 Dark Horse Ventures, LLC
Change Log
June 30, 2006
----------------------------------------------------------------------------

** UNDER DEVELOPMENT **

The following is a running list until release...

New features:
- Web Content Management module and Portal using Apache Pluto JSR-168 Embedded
  Portlet Container
  - Added the following portlets:
    - HTML Content portlet
    - Contact Us Form portlet
    - Image Gallery portlet
    - Product Catalog portlet
      - Email a friend
      - Product search
  - Added a "hit" tracker for web pages, products, and emails
- Product Importer
- IBM DB2 Database support
- IBM WAS-CE Websphere Application Server Community Edition support

Enhancements:
- Upgraded TinyMCE HTML Editor to 2.0.6.1

Developer changes:
- JUnit added with tests


----------------------------------------------------------------------------
Centric CRM 4.0.1
Copyright (C) 2006 Dark Horse Ventures, LLC
Change Log
June 1, 2006
----------------------------------------------------------------------------

This is a maintenance release to address issues reported since 4.0.

This release includes the following additions:
- Australian states/territories have been added
- Brazilian states/territories have been added

This release includes the following fixes:
- When using a default country that does not have corresponding "States"
  the address state drop-down would default to a drop-down list with the
  option being "-- None --"; this now defaults to a text field as intended
- Currency locale entries with spaces between numbers did not work correctly
- An error was reported when trying to access an email that was not sent or
  received by the current user
- Fixed a javascript exception some browsers reported when working with
  opportunities
- Fixed the Leads dashboard from displaying a "graph not found error" when