@@ -115,6 +115,8 @@ public class SetupUtils {
     DatabaseVersion.insertVersion(db, DatabaseUtils.getTypeName(db), "2006-06-16");
     // Version 4.1 beta 3
     DatabaseVersion.insertVersion(db, DatabaseUtils.getTypeName(db), "2006-06-30");
+    // Version 4.1 beta 4
+    DatabaseVersion.insertVersion(db, DatabaseUtils.getTypeName(db), "2006-07-11");
     // Events (last because a check for these is made later)
     script.source(setupPath + "events_gk.bsh");
   }
