@@ -1,6 +1,7 @@
-# These scripts upgrade the 4.0 production databases to 4.1
+# These scripts upgrade the 4.0 production databases to 4.1, in order
 
-# 4.1b1 Web Site Module
+# Web Site Module, Product Importer, Improvements
+2006-05-24-script01-holub.sql
 2006-02-23-script01-partha.bsh
 2006-02-23-script02-partha.bsh
 2006-02-23-script03-partha.bsh
@@ -8,15 +9,11 @@
 2006-04-21-script02-kailash.sql
 2006-05-18-script01-partha.bsh
 2006-05-19-script01-partha.bsh
-2006-06-01-script01-mr.bsh
-
-# 4.1b2 Product Importer
-2006-05-24-script01-holub.sql
 2006-05-25-script01-aliaksei.bsh
 2006-05-25-script02-aliaksei.bsh
-
-# 4.1b3 Portal Improvements
 
 # 4.1b4 Web access log
 2006-06-09-script01-kailash.sql
 
+# Update the icelets last
+2006-06-01-script01-mr.bsh
