@@ -2,7 +2,7 @@
 Centric CRM 4.1 beta
 Copyright (C) 2006 Dark Horse Ventures, LLC
 Change Log
-June 30, 2006
+July 11, 2006
 ----------------------------------------------------------------------------
 
 ** UNDER DEVELOPMENT **
@@ -19,13 +19,16 @@ New features:
     - Product Catalog portlet
       - Email a friend
       - Product search
+      - Receive a quote
+    - Cart Portlet
   - Added a "hit" tracker for web pages, products, and emails
-- Product Importer
+- Product Importer (.csv w/images.zip)
 - IBM DB2 Database support
 - IBM WAS-CE Websphere Application Server Community Edition support
 
 Enhancements:
 - Upgraded TinyMCE HTML Editor to 2.0.6.1
+- Email user a password when a user is added, previously only when modified
 
 Developer changes:
 - JUnit added with tests
